k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8smate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8smate
  namespace: k8smate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: k8smate
  template:
    metadata:
      labels:
        app: k8smate
    spec:
      serviceAccountName: k8smate
      containers:
        - name: k8smate
          image: ghcr.io/rcbilson/k8smate:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config-repo
              mountPath: /config
      volumes:
        - name: config-repo
          hostPath:
            path: /home/richard/config/k3s
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: k8smate
  namespace: k8smate
spec:
  selector:
    app: k8smate
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8smate
  namespace: k8smate
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: k8smate
      port:
        number: 80
